syntax = "proto3";
package lottery.lottery;

import "gogoproto/gogo.proto";
import "lottery/params.proto";
import "lottery/lottery_item.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "lottery/x/lottery/types";

// GenesisState defines the lottery module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  LotteryItem lotteryItem = 2;
  // this line is used by starport scaffolding # genesis/proto/state
}
